--- a/app/views/monograph_catalog/_index_monograph.html.erb
+++ b/app/views/monograph_catalog/_index_monograph.html.erb
@@ -137,7 +137,7 @@ $(document).ready(function() {
         <div role="tabpanel" class="tab-pane aboutware row" id="aboutware">
           <div class="col-sm-12">
             <!-- this assumes that the "aboutware" FileSet is an html doc -->
-            <%= @monograph_presenter.aboutware.file.content.html_safe %>
+            <%= @monograph_presenter.aboutware.file.content.force_encoding("UTF-8").html_safe %>
           </div>
         </div>
       <% end %>
