--- a/app/views/hyrax/monographs/show.html.erb
+++ b/app/views/hyrax/monographs/show.html.erb
@@ -24,8 +24,8 @@
 <div class="row">
   <div class="col-sm-12">
     <%= render 'items', presenter: @presenter %>
-    <%= render 'workflow_actions_widget', presenter: @presenter %>
     <%# TODO: we may consider adding these partials in the future %>
+    <%#= render 'workflow_actions_widget', presenter: @presenter %>
     <%#= render 'sharing_with', presenter: @presenter %>
     <%#= render 'user_activity', presenter: @presenter %>
   </div>
