--- a/app/views/shared/_add_content.html.erb
+++ b/app/views/shared/_add_content.html.erb
@@ -1,6 +1,6 @@
 <% include_works_link ||= can_ever_create_works? %>
 
-<% if include_works_link || include_collections_link %>
+<% if include_works_link %>
   <ul class="nav navbar-nav">
     <li class="dropdown">
     <%= link_to main_app.concern_monographs_new_path, id: "add-content", class: "dropdown-toggle", data: { toggle: "dropdown"} do %>
