--- a/app/views/e_pubs/show.html.erb
+++ b/app/views/e_pubs/show.html.erb
@@ -39,6 +39,7 @@ webgl = if Dir.exist?(UnpackService.root_path_from_noid(webgl_id, 'webgl'))
         var reader = cozy.reader('reader', {
           href: "<%= "#{main_app.epub_url.gsub!(/\?.*/, '')}/" %>",
           download_links: <%= @epub_download_presenter.download_links.to_json.html_safe %>,
+          loader_template: '<div class="fulcrum-loading"><div class="rect rect1"></div><div class="circle circ1"></div><div class="rect rect2"></div><div class="circle circ2"></div></div>',
           metadata: {
             doi: '<%= @citable_link %>',
             // TODO: iterate all creator given and family names for monograph
