--- a/app/views/monograph_catalog/index.html.erb
+++ b/app/views/monograph_catalog/index.html.erb
@@ -2,6 +2,19 @@
 <% provide :page_class, 'search monograph' %>
 <% provide :page_header do %>
   <%# render 'shared/survey' %>
+  <!-- Temporary message to HEB Users -->
+  <% if @monograph_presenter.heb? %>
+    <% if @monograph_presenter.heb_id? %>
+      <div class="message" role="alert">
+        <div class="wrapper">
+          <div class="text">ACLS Humanities E-Book has migrated to <a href="https://fulcrum.org" target="_blank">Fulcrum</a>, a new platform for enhanced digital books. Access to the legacy ACLS Humanities E-Book platform will continue until October 1st, 2018, where you can <a href="<%= @monograph_presenter.heb_dlxs_link %>" title="<%= t('monograph_catalog.index.read', title: @monograph_presenter.title) %> on the legacy platform" target="_blank">read this book</a> and others in the collection. If you are having trouble using Fulcrum, <a href="https://goo.gl/forms/mqmDGSe5ihDgWrii1">please let us know</a>.</div>
+          <div class="dismiss">
+            <button type="button" class="dismiss" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+          </div>
+        </div>
+      </div>
+    <% end %>
+  <% end %>
   <!-- breadcrumbs -->
   <%= render 'shared/breadcrumbs' %>
 <% end %><!-- provide :page_header -->
