--- a/app/views/presses/_form.html.erb
+++ b/app/views/presses/_form.html.erb
@@ -36,5 +36,6 @@
   <%= f.input :parent_id, collection: Press.parent_presses, include_blank: true, prompt: "Choose a parent press (optional)" %>
   <%= f.input :restricted_message, label: 'Message for restricted works (if any). HTML is ok' %>
   <%= f.input :share_links, label: 'Allow "share links" for temporary access of restricted materials?', as: :radio_buttons, collection: [['Yes', true], ['No', false]], default: false %>
+  <%= f.input :watermark, label: 'Apply watermark to downloaded ebooks?', as: :radio_buttons, collection: [['Yes', true], ['No', false]], default: false %>
   <%= f.submit label: 'Save Publisher' %>
 <% end %>
