--- a/app/views/monograph_catalog/_index_header_list_file_set.html.erb
+++ b/app/views/monograph_catalog/_index_header_list_file_set.html.erb
@@ -3,7 +3,7 @@
   <div class="documentHeader">
     <h4 class="index_title">
       <% counter = document_counter_with_offset(document_counter) %>
-      <%= render_markdown link_to_document document, document_show_link_field(document), counter: counter %>
+      <%= link_to_document document, render_markdown(document.title.first), counter: counter %>
     </h4>
     <% if document.section_title.present? %>
       <p>From <%= render_markdown @monograph_presenter.display_section_titles document.section_title %></p>
