--- a/app/views/press_catalog/_index_header_list_monograph.html.erb
+++ b/app/views/press_catalog/_index_header_list_monograph.html.erb
@@ -5,7 +5,7 @@
     <div class="col-sm-12">
       <h3 class="index_title">
         <% counter = document_counter_with_offset(document_counter) %>
-        <%= render_markdown link_to_document document, document_show_link_field(document), counter: counter %>
+        <%= render_markdown link_to_document document, render_markdown(document.title.first), counter: counter %>
       </h3>
       <% if presenter.authors? %>
         <span class="authors"><%= render_markdown presenter.authors %></span>
