--- a/app/views/fulcrum/_logs.html.erb
+++ b/app/views/fulcrum/_logs.html.erb
@@ -14,4 +14,9 @@
     <td>&nbsp;</td>
     <td>&nbsp;</td>
   </tr>
+  <tr>
+    <td><%= link_to "Crossref Submission Log", crossref_submission_logs_path %></td>
+    <td>&nbsp;</td>
+    <td>&nbsp;</td>
+  </tr>
 </table>
