--- a/app/views/monograph_catalog/_index_epub_toc.html.erb
+++ b/app/views/monograph_catalog/_index_epub_toc.html.erb
@@ -21,7 +21,7 @@
       <a class="toc-link" href="<%= epub_path(id: @monograph_presenter.epub_id).gsub!(/\?.*/, '') + '#' + interval.cfi  %>"><%= interval.title %></a>
       <% if @monograph_presenter.epub_presenter.multi_rendition? %>
         <div class="btn-group download" role="group" aria-label="Read or Download Section">
-          <% if @press_policy.interval_download? && interval.downloadable? %>
+          <% if @press_policy.interval_download? && interval.downloadable? && @ebook_download_presenter.downloadable_ebooks? %>
           <a class="btn btn-default btn-sm" href="<%= epub_download_interval_path(id: @monograph_presenter.epub_id, cfi: interval.cfi, title: interval.title) %>" data-turbolinks="false">
             <i id="download" class="oi" data-glyph="data-transfer-download" title="Download section" aria-hidden="true"></i>
           Download
