--- a/app/views/monograph_catalog/_index_epub_toc.html.erb
+++ b/app/views/monograph_catalog/_index_epub_toc.html.erb
@@ -1,6 +1,9 @@
-
-<% level = 0 %>
-  <% @monograph_presenter.epub_presenter.intervals.each do |interval| %>
+<%
+  level = 0
+  epub_presenter = @monograph_presenter.epub_presenter
+  epub_policy = @monograph_policy.epub_policy
+%>
+  <% epub_presenter.intervals.each do |interval| %>
     <% if interval.level > level %>
       <% level += 1 %>
       <ul class="toc section">
@@ -18,16 +21,15 @@
       <li>
     <% end %>
     <div class="section-container">
-      <a class="toc-link" href="<%= epub_path(id: @monograph_presenter.epub_id).gsub!(/\?.*/, '') + '#' + interval.cfi  %>"><%= interval.title %></a>
-      <% if @monograph_presenter.epub_presenter.multi_rendition? %>
+      <a class="toc-link" href="<%= epub_path(id: epub_presenter.id).gsub!(/\?.*/, '') + '#' + interval.cfi  %>"><%= interval.title %></a>
+      <% if @press_policy.interval_read_button?(interval) %>
         <div class="btn-group download" role="group" aria-label="Read or Download Section">
-          <% if @press_policy.interval_download? && interval.downloadable? %>
-          <a class="btn btn-default btn-sm" href="<%= epub_download_interval_path(id: @monograph_presenter.epub_id, cfi: interval.cfi, title: interval.title) %>" data-turbolinks="false">
-            <i id="download" class="oi" data-glyph="data-transfer-download" title="Download section" aria-hidden="true"></i>
-          Download
-          </a>
+          <% if interval.downloadable? && @press_policy.interval_download_button?(interval) && epub_policy.show? %>
+            <a class="btn btn-default btn-sm" href="<%= epub_download_interval_path(id: epub_presenter.id, cfi: interval.cfi, title: interval.title) %>" data-turbolinks="false">
+              <i id="download" class="oi" data-glyph="data-transfer-download" title="Download section" aria-hidden="true"></i> Download</a>
           <% end %>
-          <a class="btn btn-default btn-sm" href="<%= epub_path(id: @monograph_presenter.epub_id, anchor: interval.cfi + "/4/1:0") %>"><span class="glyphicon glyphicon-book" title="Read section" aria-hidden="true"></span> Read</a>
+          <a class="btn btn-default btn-sm" href="<%= epub_path(id: epub_presenter.id, anchor: interval.cfi + "/4/1:0") %>">
+            <span class="glyphicon glyphicon-book" title="Read section" aria-hidden="true"></span> Read</a>
         </div>
       <% end %>
     </div>
