--- a/app/views/fulcrum/_dashboard.html.erb
+++ b/app/views/fulcrum/_dashboard.html.erb
@@ -9,7 +9,7 @@
 <h2>Instituions</h2>
 <ul>
   <% current_institutions.each do |institution| %>
-    <li>Institution:<%= "#{institution.id} (#{institution.name})" %></li>
+    <li>Institution:<%= "#{institution.id} (#{institution.identifier} - #{institution.name})" %></li>
   <% end %>
 </ul>
 <h2>Keycard</h2>
